2004-09-09  Andreas Jaeger  <aj@suse.de>

	* nscd/Makefile (CFLAGS-nscd_setup_thread.c): Set to -fpie.

2004-09-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h (__SCM_CONNECT): Removed.

	* malloc/malloc.c (_int_free): Add inexpensive double free and
	memory corruption tests.
	(malloc_printf_nc): Renamed to malloc_printerr.  Second parameter
	is no format string anymore.  Don't use stdio.  Adjust all callers.
	* malloc/hooks.c: Adjust malloc_printf_nc callers.

2004-09-08  Roland McGrath  <roland@redhat.com>

	* malloc/mcheck.c: Don't use __P.
	Use prototypes definitions for static functions.

2004-09-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/fpu/bits/mathinline.h: Use __NTH instead of __THROW.

2004-09-08  Ulrich Drepper  <drepper@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* nscd/nscd-client.h: Add a few #includes.

	* nscd/Makefile (nscd-modules): Add nscd_setup_thread.
	* nscd/connections.c (nscd_run): Call setup_thread for maintenance
	threads.
	* nscd/nscd-client.h (struct database_pers_head): Add
	nscd_certainly_running field.
	* nscd/nscd.h: Declare setup_thread.
	* nscd/nscd_helper.c (__nscd_get_map_ref): Avoid the time test if
	nscd_certainly_running is nonzero.
	* sysdeps/generic/nscd_setup_thread.c: New file.
	* sysdeps/unix/sysv/linux/nscd_setup_thread.c: New file.

2004-09-08  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c: Implement r/o sharing of nscd's cache with client
	processes via shared memory.
	* nscd/nscd-client.h: Likewise.
	* nscd/nscd.h: Likewise.
	* nscd/nscd_conf.c: Likewise.
	* nscd/nscd_getgr_r.c: Likewise.
	* nscd/nscd_getpw_r.c: Likewise.
	* nscd/nscd_gethst_r.c: Likewise.
	* nscd/nscd.conf: Add new config parameters.
	* nscd/Makefile (aux): Add nscd_helper.
	* nscd/nscd_helper.c: New file.
	* nscd/mem.c (gc): Indicate beginning and end of the gc cycle.

	* nscd/hstcache.c: Simplify a lot.  We cache only the request itself,
	no derived information.